# holo

./: .gitignore  CLAUDE.md  LICENSE  README.md  holo.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
bookmarklet/: README.md  build.js  core.js  dispatch.js  entry.js  package-lock.json  package.json  title.js
bookmarklet/test/: core.test.js  dispatch.test.js  framing.test.js  title.test.js
bridge/: README.md  bridge.py
docs/: architecture-brief.md  companion-spec.md  cross-host.md  resources.md
src/holo/: __init__.py  __main__.py  _macos.py  _windows_macos.py  announce.py  auto_tunnel.py  bridge.py  browser_chrome.py  capabilities.py  capabilities_server.py  cert.py  channel.py  cli.py  clipboard.py  cloudcity_announce.py  cloudcity_discover.py  daemon.py  discover.py  dispatch.py  framing.py  init_config.py  install_bookmarklet.py  install_remote.py  mcp_connect.py  mcp_remote.py  mcp_server.py  mcp_wire.py  registry.py  remote_backend.py  remote_input.py  resources_config.py  resources_exec.py  templates.py  title.py  tunnel.py  upgrade.py  windows.py  ws_server.py
src/holo/static/: framing.js  popup.html
tests/: test_announce.py  test_auto_tunnel.py  test_bridge.py  test_browser_chrome.py  test_capabilities.py  test_cert.py  test_channel.py  test_clipboard.py  test_cloudcity_announce.py  test_cloudcity_discover.py  test_discover.py  test_dispatch.py  test_framing.py  test_ide.py  test_init_config.py  test_install_bookmarklet.py  test_install_remote.py  test_mcp_connect.py  test_mcp_listen.py  test_mcp_remote.py  test_mcp_server.py  test_mcp_wire.py  test_registry.py  test_remote_backend.py  test_remote_input.py  test_resources.py  test_resources_config.py  test_resources_exec.py  test_smoke.py  test_templates.py  test_title.py  test_tunnel.py  test_upgrade.py  test_windows.py  test_ws_server.py
