[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holo"
version = "0.0.1"
description = "Browser + screen automation primitive for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["browser-automation", "ai-agents", "mcp", "screen-automation"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
holo = "holo.cli:main"

[project.urls]
Repository = "https://github.com/nospaceleftondevice/holo"

[tool.hatch.build.targets.wheel]
packages = ["src/holo"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
