[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holo"
version = "0.1.0a1"
description = "Browser + screen automation primitive for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["browser-automation", "ai-agents", "mcp", "screen-automation"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
  "pyobjc-framework-Vision>=10.0; sys_platform == 'darwin'",
  "pyperclip>=1.8",
  "pyautogui>=0.9.54",
  "websockets>=13.0",
  "mcp>=1.2",
  # Bundled CA store for HTTPS — PyInstaller-bundled Python's OpenSSL
  # uses CA paths from the build runner that don't exist on the user's
  # machine, so `urllib` against GitHub Releases fails on first run.
  "certifi>=2024.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "pyinstaller>=6.0",
]

[project.scripts]
holo = "holo.cli:main"

[project.urls]
Repository = "https://github.com/nospaceleftondevice/holo"

[tool.hatch.build.targets.wheel]
packages = ["src/holo"]

[tool.hatch.build.targets.wheel.force-include]
"src/holo/static/popup.html" = "holo/static/popup.html"
"src/holo/static/framing.js" = "holo/static/framing.js"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# `bridge/` runs under SikuliX's bundled Jython 2.7. Linting it under
# py311 rules would push us toward syntax (f-strings, walrus, type
# hints) Jython can't parse — so the directory is hand-reviewed
# instead.
extend-exclude = ["bridge"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
